# dlib-sandbox

./: README.md
face-detection/: CMakeLists.txt  README.md  face-detection-example.cpp
face-pose/: CMakeLists.txt  README.md  face-pose-example.cpp
